# lua-resty-simdjson

./: BUILD.bazel  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  WORKSPACE  simdjson_ffi.cpp  simdjson_ffi.h
.github/workflows/: lint.yml  tests.yml
lib/resty/: simdjson.lua
lib/resty/simdjson/: cdefs.lua  decoder.lua  encoder.lua  init.lua  simdjson.lua
src/: simdjson_ffi.cpp  simdjson_ffi.h
t/: 01-sanity.t  02-decode.t  03-encode.t  04-yield.t  05-null.t  06-precision.t  07-sparse_array.t  08-cjson.t  08-empty_array.t  09-empty_array.t  10-array_mt.t
