filegroup(
    name = "all_srcs",
    srcs = glob(
        include = [
            "src/**",
        ],
        exclude = [
            "*.bazel",
        ],
    ),
)

filegroup(
    name = "lualib_srcs",
    srcs = glob([
        "lualib/**/*.lua",
        "lib/**/*.lua",
    ]),
    visibility = ["//visibility:public"],
)


cc_library(
    name = "simdjson_ffi",
    srcs = [":all_srcs"],
    copts = ["-std=c++11", "-ggdb", "-O3", "-DNDEBUG"],
    linkshared=True,
    visibility = ["//visibility:public"],
)

